force-app/main/default/objects/Movie__c/fields/Denie_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>Denie_To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denie To Delete</label>
    <type>Checkbox</type>
</CustomField>