force-app/main/default/objects/Movie__c/fields/Studio__c.field-meta.xml
<CustomField>
    <fullName>Studio__c</fullName>
    <label>Studio</label>
    <referenceTo>Studio__c</referenceTo>
    <relationshipLabel>Movies</relationshipLabel>
    <relationshipName>Movies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>