force-app/main/default/objects/Movie__c/validationRules/Prevent_data_release_input.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_data_release_input</fullName>
    <active>true</active>
    <description>Prohibits users from setting release date if Movie.Status != &apos;Released&apos;</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Release_date__c)), NOT(TEXT(Status__c)=$CustomMetadata.ReleaseDateSet__mdt.Released.StatusReleased__c))</errorConditionFormula>
    <errorMessage>You can&apos;t set release date before status don&apos;t changed to Released</errorMessage>
</ValidationRule>